Update homepage layout; add profile and background images

--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
 
     <!-- Main Content -->
     <main class="main">
+
       <!-- Home / Intro -->
       <section id="home">
+        <img src="profile.jpg" alt="Yixin Chen" class="profile-photo">
         <h1>Hello, I’m Yixin Chen</h1>
-        <p>I’m currently pursuing an M.Sc. in Physics of Life at the University of Basel, where I model biologically inspired neural networks and develop novel online learning algorithms. I love combining theory, simulation and data analysis to uncover how the brain encodes space and time.</p>
+        <p>I’m currently pursuing an M.Sc. in Physics of Life at the Biozentrum, University of Basel, where I develop biologically plausible learning algorithms to investigate how the brain encodes spatial information and how spatial memories form in the hippocampus. I enjoy combining theoretical modeling, simulations, and data analysis to unravel the mechanisms underlying neural computation. The emergence of intelligence from patterns of neural activity truly fascinates me. In addition to my work on brain-inspired algorithms, I collaborated on reinforcement-learning projects and explored large-language-model research—experiences that have deepened my appreciation for advanced AI and inspired me to continue in academia.</p>
       </section>
 
-      <!-- Recent Activities -->
-      <section id="activities">
+      <!-- Recent Activities with Background -->
+      <section id="activities" class="bg-activities">
         <h2>Recent Activities</h2>
         <ul>
-          <li><strong>Oct 2024–May 2025</strong> – Research Project on spatial memory formation in spiking neural networks at Biozentrum, University of Basel.</li>
-          <li><strong>Feb 2025–Aug 2025</strong> – Research Internship in brain-inspired learning for RNNs, Automation Institute (CAS), Beijing.</li>
+          <li><strong>4th Feb 2025</strong> – Gave a talk at the Swiss Computational Neuroscience Retreat on grid cell formation from place cell spatial information input.</li>
+          <li><strong>1st Feb 2025</strong> – Began a remote research internship on brain-inspired learning rules in linear attention mechanisms at the Automation Institute (CAS), Beijing, China.</li>
+          <li><strong>18th Oct 2024</strong> – Started a research project on spatial memory formation in spiking neural networks at the Biozentrum, University of Basel, Switzerland.</li>
+          <li><strong>18th Sept 2024</strong> – Began my master’s program in Physics of Life at the University of Basel.</li>
+          <li><strong>1st June 2024</strong> – Began a remote research internship in evolutionary computation and reinforcement learning at the University of Birmingham, UK.</li>
         </ul>
       </section>
 
@@ -50,7 +55,6 @@
       <!-- Experience -->
       <section id="experience">
         <h2>Research Experience</h2>
-        <!-- you can paste any of the <article> blocks from before here -->
         <article>
           <h3>Dec 2023–Jul 2024</h3>
           <p class="role">Research Assistant, Large-Field-of-View Light-Field Microscopy<br>
@@ -59,11 +63,25 @@
           <ul>
             <li>Developed computational imaging pipelines for extended FOV light-field microscopy.</li>
             <li>Implemented 3D reconstruction algorithms and optimized MATLAB scripts for large volumetric datasets.</li>
-            <li>Collaborated with experimentalists to validate imaging models against real microscopy data.</li>
+            <li>Collaborated with experimentalists to validate models against real microscopy data.</li>
           </ul>
         </article>
-        <!-- add other articles similarly… -->
+         <h2>Research Experience</h2>
+        <article>
+          <h3>june 2021–Jul 2022</h3>
+          <p class="role">Research Assistant, Second Harmonic Generation in Graphene<br>
+            <em>CIOMP, Chinese Academy of Sciences, Changchun, China</em>
+          </p>
+          <ul>
+            <li>Co-first author on publication "Study on the second harmonic generation mechanism in few-layer graphene"</li>
+            <li>Performed first-principles calculations of electronic structure in bilayer and trilayer graphene.</li>
+            <li>Analyzed band structures, first- and second-order conductivities, and polarization parameters.</li>
+            <li>Developed MATLAB code to process and visualize nonlinear optical response data.</li>
+          </ul>
+        </article>
+        <!-- ... other articles ... -->
       </section>
+
     </main>
   </div>
 </body>
