Update homepage layout

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <!-- Home / Intro -->
       <section id="home">
         <img src="profile.jpg" alt="Yixin Chen" class="profile-photo">
-        <h1>Hello, I’m Yixin Chen</h1>
-        <p>I’m currently pursuing an M.Sc. in Physics of Life at the Biozentrum, University of Basel, where I develop biologically plausible learning algorithms to investigate how the brain encodes spatial information and how spatial memories form in the hippocampus. I enjoy combining theoretical modeling, simulations, and data analysis to unravel the mechanisms underlying neural computation. The emergence of intelligence from patterns of neural activity truly fascinates me. In addition to my work on brain-inspired algorithms, I collaborated on reinforcement-learning projects and explored large-language-model research—experiences that have deepened my appreciation for advanced AI and inspired me to continue in academia.</p>
+        <h1>Hello, I'm Yixin Chen</h1>
+        <p>I'm currently pursuing an M.Sc. in Physics of Life at the Biozentrum, University of Basel, where I develop biologically plausible learning algorithms to investigate how the brain encodes spatial information and how spatial memories form in the hippocampus. I enjoy combining theoretical modeling, simulations, and data analysis to unravel the mechanisms underlying neural computation. The emergence of intelligence from patterns of neural activity truly fascinates me. In addition to my work on brain-inspired algorithms, I collaborated on reinforcement-learning projects and explored large-language-model research—experiences that have deepened my appreciation for advanced AI and inspired me to continue in academia.</p>
       </section>
 
       <!-- Recent Activities with Background -->
